footer section added

--- a/style/style.css
+++ b/style/style.css
@@ -225,3 +225,72 @@ body{
 .eduExperDiv{
     padding-right: 113px;
 }
+.downloadCv{
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+}
+/* footer */
+footer{
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    
+  
+}
+
+.footerContant{
+    display: flex;
+    gap: 120px;
+    /* padding: 130px 230px; */
+}
+.footerTitle{
+    font-size: 35px;
+    font-weight: 700;
+    color: #181818;
+}
+.footerDes{
+    font-size: 17px;
+    font-weight: 400;
+    color: #757575;
+    margin-bottom: 30px;
+}
+.footerChild{
+    max-width: 50%;
+}
+
+
+.icon{
+    margin-right: 25px;
+}
+footer input[type="text"]{
+    height: 40px;
+    font-size: 1.1em;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    margin: 0px 0px;
+    margin-bottom: 25px;
+    border: none;
+}
+footer input[type="email"]{
+    height: 40px;
+    font-size: 1.1em;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    margin: 0px 0px;
+    margin-bottom: 25px;
+    border: none;
+}
+footer textarea[type="message"]{
+    font-size: 1.4em;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    margin: 0px 0px;
+    margin-bottom: 25px;
+    border: none;
+}
